# video-average-frame

./: .gitignore  .travis.yml  README.md  average.py  process.py  pyproject.toml
.github/workflows/: python-app.yml
